# LinuxAppDev2025

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  debug_script_1.gdb  debug_script_2.gdb  range.c
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  error_injection_test.sh  move.c  protect_delete.c  test_protected.sh
07_Environmental/rhasher/: Makefile.am  configure.ac
07_Environmental/rhasher/src/: Makefile.am  rhasher.c
07_Environmental/rhasher/tests/: Makefile.am  test.sh
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  guesser.c
09_PatchDiff/: Makefile  maze.c  maze_p1.patch  maze_p2.patch  maze_p3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/include/: Makefile.am  growable_buf.h
10_LibTesting/src/: Makefile.am  growable_buf.c
10_LibTesting/tests/: Makefile.am  test_main.c  test_suite.c  test_suite.h
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/doc/: mainpage.dox.in
11_Documenting/man/: Makefile.am  guesser.1
11_Documenting/po/: Makefile.am  ru.po
11_Documenting/src/: Makefile.am  guesser.c  roman.c  roman.h
12_InstallPackaging/: Makefile.am  configure.ac
12_InstallPackaging/docs/: Doxyfile.in  Makefile.am  mainpage.dox.in
12_InstallPackaging/man/: Makefile.am  slot_machine.1
12_InstallPackaging/po/: Makefile.am  ru.po
12_InstallPackaging/src/: Makefile.am  slot_lib.c  slot_lib.h  slot_machine.c
12_InstallPackaging/tests/: Makefile.am  test_main.c  test_suite.c  test_suite.h
