SUBDIRS = src po
ACLOCAL_AMFLAGS = -I m4

maintainer-clean-local:
	rm -rf ABOUT-NLS configure config.* autom4te.cache \
	Makefile Makefile.in aclocal.m4 ltmain.sh m4 \
	compile install-sh missing depcomp stamp-h1 *~ \
	src/guesser src/guesser.o src/Makefile src/Makefile.in src/.deps \
	po/*~ po/Makefile* po/*quot* po/POTFILES* po/*header* po/Makevars.template po/*pot*

